# pymp

./: .gitignore  CMakeLists.txt  README.md  get-csrc.sh  pyproject.toml  setup-for-dev.sh
pymp/: __init__.py  geometry.py  linalg.py
pymp/geometry/: __init__.py
pymp/linalg/: __init__.py  cholmod.py
src/: checkings.cpp  checkings.hpp  cholesky.cpp  cholesky.hpp  common.hpp  geometry.cpp  geometry.hpp  linalg.cpp  linalg.cu  linalg.hpp  main.cpp
tests/: test_geom.py  test_geom_laplacian.py  test_linalg.py  test_linalg_cuda_direct.py  test_linalg_direct.py
